--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -1,1 +1,8 @@
-<h1>Edit <%=@recipe.name%><h1>
+<h1>Edit: <%=@recipe.name%><h1>
+  <form method="POST" action="/recipes/<%=@recipe.id%>">
+  <input id="hidden" type="hidden" name="_method" value="patch">
+    <p>Name: <input type="text" name="name"></p>
+    <p>Ingredients: <input type="text" name="ingredients"></p>
+    <p>Cook Time: <input type="text" name="cook_time"></p>
+    <input type="submit" name="Create!">
+  </form>
