--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -1,4 +1,5 @@
 <h1>Edit: <%=@recipe.name%><h1>
+  <p>Ingredients: <%=@recipe.ingredients%></p>
   <form method="POST" action="/recipes/<%=@recipe.id%>">
   <input id="hidden" type="hidden" name="_method" value="patch">
     <p>Name: <input type="text" name="name"></p>
