automatically backed up by learn

--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -5,5 +5,5 @@
     <p>Name: <input type="text" name="name"></p>
     <p>Ingredients: <input type="text" name="ingredients"></p>
     <p>Cook Time: <input type="text" name="cook_time"></p>
-    <input type="submit" name="Create!">
+    <input type="submit" id="submit" name="Submit">
   </form>
